--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     --color-white: #fff;
     --color-info-dark: #7d8da1;
     --color-info-light: #dce1eb;
-    --color-dark: #363949;
+    --color-dark: black;
     --color-light: rgba(132, 139, 200, 0.18);
     --color-primary-variant: #111e88;
     --color-dark-variant: #677483;
@@ -46,11 +46,12 @@
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--color-dark);
 }
 
 #main-header {
     width: 100%;
+    color: var(--color-dark);
     height: 580px;
 }
 
@@ -164,4 +165,19 @@ a {
 .orange:hover {
     background-color: transparent;
     border: 1px solid var(--color-dark);
+}
+
+/* ============= SECTION ============ */
+
+#main-section {
+    width: 100%;
+    height: 110px;
+    text-align: center;
+    padding-top: 3rem;
+    line-height: 2rem;
+    color: var(--color-dark);
+}
+
+#main-section h1{
+    font-size: 2rem;
 }
