--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --color-primary: #7380ec;
     --color-danger: #ff7782;
     --color-success: #41f1b6;
-    --color-warning: #ffbb55;
+    --color-warning: #a8dadc;
     --color-white: #fff;
     --color-info-dark: #7d8da1;
     --color-info-light: #dce1eb;
@@ -153,12 +153,12 @@ a {
 }
 
 .orange {
-    background-color: orange;
+    background-color: var(--color-warning);
     border: none;
 }
 
 .transparent:hover {
-    background-color: orange;
+    background-color: var(--color-warning);
     border: none;
 }
 
@@ -188,7 +188,7 @@ a {
 #about-section {
     width: 100%;
     height: 450px;
-    background-color: #e0dddd;
+    background: var(--color-background);
     text-align: center;
 }
 #about-section .about-info {
@@ -226,14 +226,14 @@ a {
 .container3 {
     width: 70%;
     height: 100px;
-    background-color: rgb(232, 232, 232);
+    background: var(--color-background);
     padding: 15px;
     border-radius: 5px;
     margin: 80px 0 0 175px;
 }
 .btn {
     float: right;
-    background-color: orange;
+    background-color: var(--color-warning);
     width: 110px;
     padding: 10px;
     margin-top: 5px;
@@ -246,7 +246,7 @@ a {
     color: white;
 }
 .btn:hover {
-    background-color: rgb(233, 152, 3);
+    background-color: var(--color-primary);
 }
 
 /*======================= MAIN FOOTER ========================*/
